--- a/server/components/card/card.liquid
+++ b/server/components/card/card.liquid
@@ -1,3 +1,6 @@
+{% comment %}  
+  liquid 
+ {% endcomment %}
 <div class="card">
   <h2 class="h2">{{ item.name }}</h2>
   <img class="card__image" src="{{ item.image.src }}" alt="{{ item.image.alt }}" width="{{ item.image.width }}" height="{{ item.image.height }}" />
