--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -18,12 +18,14 @@
 
 <body>
   <header>
+    {% comment %} hier navigatie inzetten {% endcomment %}
     Deze header staat op elke pagina
   </header>
   <main>
     {% block content %}{% endblock %}
   </main>
   <footer>
+     {% comment %} footer styling {% endcomment %}
     Deze footer staat op elke pagina
   </footer>
 </body>
