--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -4,7 +4,7 @@
 
 <h1 class="h1">{{ title }}</h1>
 
-<ul class="grid">
+{% comment %} <ul class="grid">
   {% for item in items %}
     <li>
       <a href="/plant/{{ item.id }}">
@@ -12,6 +12,6 @@
       </a>
     </li>
   {% endfor %}
-</ul>
+</ul> {% endcomment %}
 
 {% endblock %}
