loading api data in detail

--- a/server/layouts/base.css
+++ b/server/layouts/base.css
@@ -1,7 +1,16 @@
+/*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
+/*    HEADING     */
+/*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
+
 header {
   padding: 1rem;
 }
 
+
+
+/*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
+/*     FOOTER     */
+/*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
 footer {
   padding: 1rem;
 }
