--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -17,16 +17,22 @@
 </head>
 
 <body>
+   {% comment %} hier navigatie inzetten {% endcomment %}
   <header>
-    {% comment %} hier navigatie inzetten {% endcomment %}
-    Deze header staat op elke pagina
+    header
   </header>
+
+
   <main>
     {% block content %}{% endblock %}
   </main>
-  <footer>
+
+
      {% comment %} footer styling {% endcomment %}
-    Deze footer staat op elke pagina
+  <footer>
+    footer
   </footer>
+
+
 </body>
 </html>
