--- a/server/views/detail.liquid
+++ b/server/views/detail.liquid
@@ -1,6 +1,16 @@
+<pre>{{ petfinderData | json }}</pre>
+
 {% layout "server/layouts/base.liquid" %}
 
 {% block content %}
-<h1 class="h1">{{ item.name }}</h1>
-<img src="{{ item.image.src }}" alt="{{ item.image.alt }}" width="{{ item.image.width }}" height="{{ item.image.height }}" />
+  <h1>Lijst van Dieren</h1>
+  <ul>
+    {% for animal in petfinderData.animals %}
+      <li>{{ animal.id }}</li>  <!-- Toon de ID van elk dier -->
+    {% endfor %}
+  </ul>
 {% endblock %}
+
+
+
+
