basic styling header & footer

--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -19,7 +19,14 @@
 <body>
    {% comment %} hier navigatie inzetten {% endcomment %}
   <header>
-    header
+    <nav>
+      <ul>
+        <li>NewHome</li>
+        <li>Home</li>
+        <li>Favorites</li>
+        <li>My account</li>
+      </ul>
+    </nav>
   </header>
 
 
@@ -30,7 +37,9 @@
 
      {% comment %} footer styling {% endcomment %}
   <footer>
-    footer
+    <ul>
+      <li><img src="/assets/logo-tryout.png" alt="logo NewHome"></li>
+    </ul>
   </footer>
 
 
