--- a/client/index.css
+++ b/client/index.css
@@ -1,5 +1,6 @@
-
+/* ⭐️⭐️⭐️⭐️ */
 /* CLIENT  */
+/* ⭐️⭐️⭐️⭐️ */
 
 /* global styles */
 @import 'reset.css';
@@ -14,14 +15,42 @@
 /* component styling */
 @import '../server/components/card/card.css';
 
-
+/* 💗💗💗💗💗💗💗💗💗 */
 /* GENERAL STYLING */
+/* 💗💗💗💗💗💗💗💗💗 */
+
 body {
   color: black;
-  max-width: 1440px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
-main {
-  padding: 1rem;
+main{
+  min-height: 89.5vh;
 }
+
+:root{
+  /* main colors */
+  --color-beige: #DDD6CE;
+  --color-beige-light: #F5EBDD;
+  --color-brown: #6E5849;
+  --color-black: #000000;
+  --color-white: #FFFFFF; 
+
+  /* accent colors */
+  --color-pastel-green: #D4F4DD;
+  --color-pastel-blue: #DCEEF2;
+  --color-pastel-pink: #FADADD;
+  --color-pastel-yellow: #FFF5C3;
+  --color-pastel-orange: #F2C6B4;
+
+
+  /* padding & margins */
+  /* fonts */
+}
+
+ul, ol{
+  list-style: none;
+}
+
