--- a/server/layouts/base.css
+++ b/server/layouts/base.css
@@ -1,16 +1,70 @@
 /*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
-/*    HEADING     */
+/*    General      */
 /*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
 
-header {
-  padding: 1rem;
+/* combination for 
+header & footer  */
+
+header, footer{
+  background-color: var(--color-beige);
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 
 
 /*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
+/*    HEADING     */
+/*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
+
+nav ul{
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 1fr;
+  gap: 50px;
+  height: 4.5em;
+}
+
+nav li{
+  background-color: var(--color-brown);
+  padding: 10px 20px;
+  border-radius: 20px;
+  color: var(--color-white);
+  text-align: center;
+
+  &:nth-of-type(1){
+    background-color: transparent;
+    color: var(--color-brown);
+    font-size: 1.5em;
+    grid-column: 1/ 2;
+    grid-row: 1;
+  }
+
+  &:nth-of-type(2){
+    grid-column: 4;
+    grid-row: 1;
+  }
+
+  &:nth-of-type(3){
+    grid-column: 5;
+    grid-row: 1;
+  }
+
+  &:nth-of-type(4){
+    grid-column: 6;
+    grid-row: 1;
+  }
+}
+
+
+/*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
 /*     FOOTER     */
 /*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
-footer {
-  padding: 1rem;
+
+footer img{
+  width: 50px;
+  height: 50px;
+  margin: 0 10px;
 }
