--- a/server/layouts/base.css
+++ b/server/layouts/base.css
@@ -7,6 +7,10 @@ header & footer  */
 
 header, footer{
   background-color: var(--color-beige);
+  padding: 14px;
+}
+
+footer{
   display: flex;
   justify-content: center;
   width: 100%;
@@ -20,12 +24,13 @@ header, footer{
 
 nav ul{
   display: grid;
+  flex-direction: row;
   align-items: center;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 1fr;
-  gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));  grid-template-rows: 1fr;
+  gap: 15px;
   height: 4.5em;
 }
+
 
 nav li{
   background-color: var(--color-brown);
@@ -33,30 +38,15 @@ nav li{
   border-radius: 20px;
   color: var(--color-white);
   text-align: center;
+  
 
   &:nth-of-type(1){
     background-color: transparent;
     color: var(--color-brown);
     font-size: 1.5em;
-    grid-column: 1/ 2;
-    grid-row: 1;
-  }
-
-  &:nth-of-type(2){
-    grid-column: 4;
-    grid-row: 1;
-  }
-
-  &:nth-of-type(3){
-    grid-column: 5;
-    grid-row: 1;
-  }
-
-  &:nth-of-type(4){
-    grid-column: 6;
-    grid-row: 1;
   }
 }
+
 
 
 /*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
@@ -68,3 +58,13 @@ footer img{
   height: 50px;
   margin: 0 10px;
 }
+
+
+/*     media query     */
+@media (max-width: 500px) {
+  nav li {
+    padding: 8px 16px;
+    font-size: 0.9rem;
+  }
+}
+
