--- a/server/views/index.css
+++ b/server/views/index.css
@@ -1,5 +1,23 @@
-/* .grid {
+.grid {
   display: grid;
-  gap: 1rem;
+  gap: .5rem;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-} */
+  text-align: center;
+}
+
+.grid li{
+  background-color: lightblue;
+}
+
+button{
+  margin-top: 1.5rem;
+  padding: 1rem 4rem;
+  border-radius: 5px;
+  background-color: blue;
+  color: white;
+
+  &:active
+  {
+    background-color: darkblue;
+  }
+}
