--- a/server/components/card/card.liquid
+++ b/server/components/card/card.liquid
@@ -10,15 +10,16 @@
       {% endif %}
 
       {{ animal.name }}
-      {% comment %} <br>
-      <br>
-      {{ animal.age }}
-      <br>
-      {{ animal.gender }}
-      <br>
-      {{ animal.id }}
-      <br>
-      {{ animal.size }} {% endcomment %}
+
+       <!-- Voeg hier de favorieten-knop toe -->
+       <button class="favorite-btn" data-animal-id="{{ animal.id }}">
+        {% if animal.favorited %}
+          ❤️  <!-- Als het dier al in de favorieten staat, laat een gevuld hart zien -->
+        {% else %}
+          🤍  <!-- Anders een leeg hart -->
+        {% endif %}
+      </button>
+      
     </li>
   </ul>
 </div>
