--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -21,10 +21,9 @@
   <header>
     <nav>
       <ul>
-        <li>NewHome</li>
-        <li>Home</li>
+        <li><a href="/">NewHome</a></li>
+        <li><a href="/">Home</a></li>
         <li>Favorites</li>
-        <li>My account</li>
       </ul>
     </nav>
   </header>
@@ -33,6 +32,7 @@
   <main>
     {% block overview %}{% endblock %}
     {% block details %}{% endblock %}
+    {% block favorites %}{% endblock %}
   </main>
 
 
