--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -23,7 +23,7 @@
       <ul>
         <li><a href="/">NewHome</a></li>
         <li><a href="/">Home</a></li>
-        <li>Favorites</li>
+        <li><a href="/favorites">Favorites</a></li>
       </ul>
     </nav>
   </header>
