--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -2,6 +2,16 @@
 
 {% block overview %}
 
+<div>
+<h1>Searching for a family</h1>
+<h2>Would you love me?</h2>
+
+<p>See all the animals </p>
+</div>
+
+
+
+
 <ul class="grid">
   {% for animal in petfinderData.animals %}
     <li>
