--- a/server/views/index.css
+++ b/server/views/index.css
@@ -1,19 +1,19 @@
 .grid {
   display: grid;
-  gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  padding: 1rem;
+  align-items: center;
 }
 
 .grid li {
-  background-color: #f9f9f9;
   border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   text-align: center;
   transition: transform 0.2s ease-in-out;
 }
 
+.grid a{
+  text-decoration: none;
+}
 
 .grid img {
   width: 100%;
