--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -2,14 +2,12 @@
 
 {% block overview %}
 
-<div>
+<div class="homepage">
 <h1>Searching for a family</h1>
 <h2>Would you love me?</h2>
 
 <p>See all the animals </p>
 </div>
-
-
 
 
 <ul class="grid">
