--- a/server/components/card/card.liquid
+++ b/server/components/card/card.liquid
@@ -11,14 +11,20 @@
 
       {% if animal.primary_photo_cropped %}
         <div class="animal-card">
-          <img src="{{ animal.primary_photo_cropped.small }}" alt="{{ animal.name }}">
+          <img src="{{ animal.primary_photo_cropped.small }}" 
+          alt="{{ animal.name }}"
+          style="view-transition-name: animal-image-{{ animal.id }};"
+          >
           <h2>{{ animal.name }}</h2>
         </div>
       {% elsif animal.photos %}
         {% assign first_photo = animal.photos[0] %}
         {% if first_photo %}
           <div class="animal-card">
-            <img src="{{ first_photo.small }}" alt="{{ animal.name }}">
+            <img src="{{ first_photo.small }}" 
+            alt="{{ animal.name }}"
+            style="view-transition-name: animal-image-{{ animal.id }};"
+  >
             <h2>{{ animal.name }}</h2>
           </div>
         {% endif %}
