--- a/server/layouts/base.css
+++ b/server/layouts/base.css
@@ -7,17 +7,13 @@ header & footer  */
 
 header, footer{
   background-color: var(--color-beige);
-  padding: 14px;
+  padding: 10px;
 }
 
 footer{
   display: flex;
   justify-content: center;
   width: 100%;
-}
-
-a{
-  color: black;
 }
 
 
@@ -27,10 +23,9 @@ a{
 /*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
 
 nav ul{
-  display: grid;
-  flex-direction: row;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));  grid-template-rows: 1fr;
   gap: 15px;
   height: 4.5em;
 }
@@ -39,20 +34,16 @@ nav ul{
 nav li{
   padding: 10px 20px;
   border-radius: 20px;
-  color: var(--color-white);
-  background-color: #816D5F;
   text-align: center;
   text-decoration: none;
-  
 
-  &:nth-of-type(1){
-    background-color: transparent;
-    color: var(--color-brown);
-    font-size: 1.5em;
+
+  &:nth-of-type(2){
+    background-color: var(--color-brown);
+    color: var(--color-white);
   }
+
 }
-
-
 
 /*⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ */
 /*     FOOTER     */
@@ -62,14 +53,5 @@ footer img{
   width: 50px;
   height: 50px;
   margin: 0 10px;
-}
-
-
-/*     media query     */
-@media (max-width: 500px) {
-  nav li {
-    padding: 8px 16px;
-    font-size: 0.9rem;
-  }
 }
 
