--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -4,6 +4,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% block head %}
     <title>{{ title }}</title>
+
+    {% comment %} google fonts {% endcomment %}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Questrial&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
   {% endblock %}
   {% if NODE_ENV == "development" %}
     <script type="module" src="http://localhost:5173/@vite/client" defer></script>
@@ -11,6 +17,7 @@
   {% else %}
     <link rel="stylesheet" href="/index.css">
     <script src="/index.js" defer></script>
+
   {% endif %}
   {% block styles %}{% endblock %}
   {% block scripts %}{% endblock %}
@@ -21,7 +28,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/">NewHome</a></li>
+        <li><a href="/"><img src="/assets/images/main-logo.png" alt=""></a></li>
         <li><a href="/favorites">Favorites</a></li>
       </ul>
     </nav>
@@ -38,7 +45,7 @@
      {% comment %} footer styling {% endcomment %}
   <footer>
     <ul>
-      <li><img src="/assets/logo-tryout.png" alt="logo NewHome"></li>
+      <li><img src="/assets/images/main-logo.png" alt="logo NewHome"></li>
     </ul>
   </footer>
 
