--- a/server/views/index.css
+++ b/server/views/index.css
@@ -1,3 +1,23 @@
+
+/* home page informatie */
+.homepage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  height: 55vh;
+
+  background-image: url('/images/home-banner.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+
+
+
+
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -119,18 +139,6 @@
 .favorite-btn:hover {
   transform: scale(1.1);
 }
-
-
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2rem;
-  height: 20vh;
-  background-color: #F5EBDD;
-  border-radius: 12px;
-}
-
 
 
 .favorites h1{
