adding image home page banner

--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -7,6 +7,7 @@
 <h2>Would you love me?</h2>
 
 <p>See all the animals </p>
+<img src="assets/images/home-banner.png" alt="images of dogs & cats">
 </div>
 
 
