--- a/server/views/index.css
+++ b/server/views/index.css
@@ -4,13 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
-  height: 55vh;
-
-  background-image: url('/images/home-banner.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  justify-content: center;
+  text-align: center;
+  padding-top: 2em;
+  gap: 1em;
 }
 
 
