--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -6,8 +6,8 @@
 <h1>Searching for a family</h1>
 <h2>Would you love me?</h2>
 
-<p>See all the animals </p>
 <img src="assets/images/home-banner.png" alt="images of dogs & cats">
+<p>see all the animals</p>
 </div>
 
 
