--- a/server/views/index.css
+++ b/server/views/index.css
@@ -10,6 +10,14 @@
   gap: 1em;
 }
 
+.homepage p{
+  font-size: 1.2rem;
+  padding: .5em 2em;
+  border-radius: 20px;
+  border: .2em solid var(--color-white);
+  background-color: var( --color-pastel-pink);
+}
+
 
 
 
