--- a/client/index.css
+++ b/client/index.css
@@ -36,7 +36,7 @@ main{
 
 h1{
   font-size: 3.5em;
-  color: var(--color-brown);
+  color: var(--color-black);
 }
 
 a{
@@ -49,7 +49,7 @@ ul, ol{
 }
 
 h2{
-  color: var(--color-brown);
+  color: var(--color-black);
   font-size: 2em;
 }
 
