--- a/server/components/card/card.css
+++ b/server/components/card/card.css
@@ -1,9 +1,50 @@
-
-li{
-    list-style: none;
-}
-
-.grid p{
-    color: var(--color-black);
+.card {
+    max-width: 320px;
+    margin: 1rem auto;
+    border-radius: 1rem;
+    background-color: #fff;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+    transition: transform 0.3s ease;
+  }
+  
+  .card:hover {
+    transform: translateY(-5px);
+  }
+  
+  .animal-card {
     text-align: center;
-}
+  }
+  
+  .animal-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 0.75rem;
+    object-fit: cover;
+    margin-bottom: 0.75rem;
+    aspect-ratio: 1 / 1;
+  }
+  
+  .card-layout h3 {
+    color: var(--color-black);
+    padding: 10px 20px;
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+    font-weight: 500;
+  }
+  
+  .favorite-btn {
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: transform 0.2s;
+    position: absolute;
+
+    top: 0.75rem;
+    right: 0.75rem;
+  }
+  
+  .favorite-btn:hover {
+    transform: scale(1.2);
+  }
+ 
