--- a/server/views/index.css
+++ b/server/views/index.css
@@ -20,60 +20,26 @@
 
 
 
-
-
-
-.grid {
+.grid2 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   align-items: center;
 }
 
-.grid li {
+.grid2 li {
   border-radius: 12px;
   padding: 1rem;
   text-align: center;
   transition: transform 0.2s ease-in-out;
 }
 
-.grid a{
-  text-decoration: none;
-}
 
-.grid img {
+.grid2 img {
   width: 100%;
-  height: 250px;
+  height: 200px;
   object-fit: cover;
   border-radius: 8px;
-  margin-bottom: 1rem;
-}
-
-.card-title {
-  font-size: 1.25rem;
-  font-weight: bold;
-  margin: 0.5rem 0;
-  color: #333;
-}
-
-.card-description {
-  font-size: 1rem;
-  color: #555;
-  margin-bottom: 1rem;
-}
-
-.card-button {
-  display: inline-block;
-  padding: 0.75rem 1.5rem;
-  background-color: #007BFF;
-  color: white;
-  border-radius: 8px;
-  text-decoration: none;
-  font-weight: bold;
-  transition: background-color 0.2s ease-in-out;
-}
-
-.card-button:hover {
-  background-color: #0056b3;
+  margin-bottom: .5em;
 }
 
 
