--- a/server/views/favorites.liquid
+++ b/server/views/favorites.liquid
@@ -29,7 +29,7 @@
             
             <form method="POST" action="/favorite">
   <input type="hidden" name="animalId" value="{{ animal.id }}">
-  <button type="submit" class="favorite-btn">
+  <button type="submit" class="delete-btn">
     🗑️ Delete favorite
   </button>
 </form>
