--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -2,6 +2,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon" />
+
   {% block head %}
     <title>{{ title }}</title>
 
