styling the next and before buttons

--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -10,10 +10,7 @@
 <p>see all the animals</p>
 </div>
 
-
-
-
-<ul class="grid2">
+<ul class="layout-animals">
   {% for animal in petfinderData.animals %}
     <li>
       <a href="/detail/{{ animal.id }}">
