--- a/server/views/index.css
+++ b/server/views/index.css
@@ -1,5 +1,5 @@
 
-/* home page informatie */
+/* home page layout */
 .homepage {
   display: flex;
   flex-direction: column;
@@ -8,6 +8,7 @@
   text-align: center;
   padding-top: 2em;
   gap: 1em;
+ 
 }
 
 .homepage p{
@@ -19,28 +20,67 @@
 }
 
 
-
-.grid2 {
+.layout-animals {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   align-items: center;
 }
 
-.grid2 li {
+.layout-animals li {
   border-radius: 12px;
   padding: 1rem;
   text-align: center;
   transition: transform 0.2s ease-in-out;
 }
 
-
-.grid2 img {
+.layout-animals img {
   width: 100%;
   height: 200px;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: .5em;
 }
+
+/* next en before buttons */
+.next-page {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+.next-page a {
+  padding: 10px 25px;
+  border-radius: 12px;
+  text-decoration: none;
+  font-weight: 500;
+  color: var(--color-black);
+  transition: background-color 0.3s ease;
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.1);
+}
+
+.next-page a:first-child {
+  background-color: var(--color-pastel-blue); 
+  border: .2em solid var(--color-white);
+}
+
+.next-page a:first-child:hover {
+  background-color: #9bb6c1;
+}
+
+.next-page a:last-child {
+  background-color: var(--color-pastel-green);
+  border: .2em solid var(--color-white);
+}
+
+.next-page a:last-child:hover {
+  background-color: #a7ceb0;
+}
+
+
+
+
+
+
 
 
 /* detail.css */
