--- a/server/views/favorites.liquid
+++ b/server/views/favorites.liquid
@@ -30,7 +30,7 @@
             <form method="POST" action="/favorite">
             <input type="hidden" name="animalId" value="{{ animal.id }}">
             <button type="submit" class="delete-btn">
-            Delete
+            Delete  ❤️
             </button>
           </form>
           </div>
