--- a/server/components/card/card.css
+++ b/server/components/card/card.css
@@ -40,8 +40,10 @@
     transition: transform 0.2s;
     position: absolute;
 
-    top: 0.75rem;
+    top: 1.5rem;
     right: 0.75rem;
+    background-color: transparent;
+    border: none;
   }
   
   .favorite-btn:hover {
